--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
       <h2>Something has gone wrong</h2>
       <p class="intro-text">Click the button below to go back to the home page or use the links above to find what you are looking for.</p>
         <div class="col s12 center align">
-          <a href="{{ url_for('home') }}" class="btn waves-effect waves-light red darken-4 center-align">
+          <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light red darken-4 center-align">
             <i class="fas fa-home"></i>Home
           </a>
         </div>
