--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -25,7 +25,7 @@
 
             <!-- input recipe description -->  
             <div id="description-col" class="input-field col s12">
-                <input id="recipe_description" name="author_name" minlength="2" maxlength="30" type="text" class="validate">
+                <input id="recipe_description" name="recipe_description" minlength="2" maxlength="30" type="text" class="validate">
                 <label for="recipe_description">Description</label>
             </div>
 
