--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -30,7 +30,7 @@
 
                  <!-- input recipe description -->  
             <div id="description-col" class="input-field col s12">
-                <input id="recipe_description" name="author_name" minlength="2" maxlength="30" value="{{ recipe.recipe_name }} type="text" class="validate">
+                <input id="recipe_description" name="recipe_description" minlength="2" maxlength="30" value="{{ recipe.recipe_description }}" type="text" class="validate">
                 <label for="recipe_description">Description</label>
             </div>
 
@@ -39,6 +39,7 @@
             <div class="row">
                 <div class="input-field col s12" id="ingredient-section">
                     <input id="ingredients" name="ingredients" type="text" class="validate ingredient-input" minlength="4" required>
+                    {% for ingredient in recipe.ingredients %} {{ingredient}} {% endfor %}
                     <label for="ingredients">Ingredients</label>
                     <!--Below is where each new ingredient is added-->
                     <div id="ingredient-insert"></div>
